--- a/index.html
+++ b/index.html
@@ -234,32 +234,162 @@
             font-size: 1.05rem;
         }
 
-        /* ===== CONTACT ===== */
+        /* ===== CONTACT SECTION ===== */
+        .contact-wrapper {
+            max-width: 1000px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 60px;
+            align-items: start;
+        }
+
+        .contact-info-box {
+            background: linear-gradient(135deg, #041a3d 0%, #0a2a66 100%);
+            border-radius: 20px;
+            padding: 50px 40px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.15);
+        }
+
+        .contact-info-box h3 {
+            color: #fff;
+            font-size: 1.8rem;
+            margin-bottom: 40px;
+            font-weight: 700;
+        }
+
         .contact {
-            background: #f1f3f8;
-            border-radius: 25px;
-            padding: 50px;
-            max-width: 600px;
-            margin: auto;
-            box-shadow: 0 15px 45px rgba(0,0,0,0.15);
+            background: transparent;
+            padding: 0;
+            margin: 0;
+            box-shadow: none;
+            border-radius: 0;
         }
 
         .contact p {
-            font-size: 1rem;
-            margin-bottom: 20px;
+            text-align: left;
             display: flex;
             align-items: flex-start;
             gap: 16px;
-            text-align: left;
+            margin-bottom: 30px;
+            color: #fff;
         }
 
         .contact-icon {
-            font-size: 1.3rem;
-            color: #0a2a66;
-            width: 24px;
+            font-size: 1.4rem;
+            color: #fff;
+            width: 28px;
             text-align: center;
             flex-shrink: 0;
-            margin-top: 2px;
+            margin-top: 4px;
+        }
+
+        /* ===== CONTACT FORM ===== */
+        .contact-form {
+            background: #f8f9fc;
+            border-radius: 20px;
+            padding: 50px 40px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.08);
+            border: 1px solid rgba(10, 42, 102, 0.08);
+        }
+
+        .contact-form h3 {
+            color: #0a2a66;
+            font-size: 1.8rem;
+            margin-bottom: 30px;
+            font-weight: 700;
+            text-align: left;
+        }
+
+        .form-group {
+            margin-bottom: 22px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: 600;
+            color: #0a2a66;
+            font-size: 0.95rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 14px 16px;
+            border: 2px solid #e0e5f0;
+            border-radius: 10px;
+            font-family: 'Poppins', sans-serif;
+            font-size: 0.95rem;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+            background: #fff;
+            color: #222;
+        }
+
+        .form-group input::placeholder,
+        .form-group textarea::placeholder {
+            color: #999;
+        }
+
+        .form-group input:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: #0a2a66;
+            box-shadow: 0 0 0 4px rgba(10, 42, 102, 0.1);
+            background: #fff;
+        }
+
+        .form-group textarea {
+            resize: vertical;
+            min-height: 140px;
+        }
+
+        .form-submit {
+            background: linear-gradient(135deg, #0a2a66, #b3001b);
+            color: #fff;
+            border: none;
+            padding: 16px 40px;
+            border-radius: 10px;
+            font-weight: 700;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 100%;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-top: 10px;
+        }
+
+        .form-submit:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 15px 40px rgba(10, 42, 102, 0.4);
+        }
+
+        .form-submit:active {
+            transform: translateY(-1px);
+        }
+
+        /* ===== RESPONSIVE ===== */
+        @media (max-width: 768px) {
+            .contact-wrapper {
+                grid-template-columns: 1fr;
+                gap: 40px;
+            }
+
+            .contact-info-box {
+                padding: 40px 30px;
+            }
+
+            .contact-form {
+                padding: 40px 30px;
+            }
+
+            .contact-info-box h3,
+            .contact-form h3 {
+                font-size: 1.5rem;
+            }
         }
 
         /* ===== FOOTER ===== */
@@ -373,11 +503,44 @@
     <h2>Contact Us</h2>
     <div class="section-line"></div>
 
-    <div class="contact">
-        <p><span class="contact-icon"><i class="fas fa-map-marker-alt"></i></span><strong>Address:</strong> 99 Robert Mugabe Street, Second Floor, Suite 203</p>
-        <p><span class="contact-icon"><i class="fas fa-phone"></i></span><strong>Phone:</strong> 0710 918 534</p>
-        <p><span class="contact-icon"><i class="fab fa-whatsapp"></i></span><strong>WhatsApp:</strong> 0719 999 896</p>
-        <p><span class="contact-icon"><i class="fas fa-envelope"></i></span><strong>Email:</strong> khayaconsultancy@gmail.com</p>
+    <div class="contact-wrapper">
+        <!-- Contact Information (Left Side) -->
+        <div class="contact-info-box">
+            <h3>Get In Touch</h3>
+            <div class="contact">
+                <p><span class="contact-icon"><i class="fas fa-map-marker-alt"></i></span><strong>99 Robert Mugabe Street</strong><br>Second Floor, Suite 203</p>
+                <p><span class="contact-icon"><i class="fas fa-phone"></i></span><strong>0710 918 534</strong></p>
+                <p><span class="contact-icon"><i class="fab fa-whatsapp"></i></span><strong>0719 999 896</strong></p>
+                <p><span class="contact-icon"><i class="fas fa-envelope"></i></span><strong>khayaconsultancy@gmail.com</strong></p>
+            </div>
+        </div>
+
+        <!-- Contact Form (Right Side) -->
+        <form class="contact-form" action="#" method="POST">
+            <h3>Send us a Message</h3>
+            
+            <div class="form-group">
+                <label for="name">Full Name</label>
+                <input type="text" id="name" name="name" placeholder="Innocent Chipuriro " required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email Address</label>
+                <input type="email" id="email" name="email" placeholder="your.email@example.com" required>
+            </div>
+
+            <div class="form-group">
+                <label for="subject">Subject</label>
+                <input type="text" id="subject" name="subject" placeholder="Just type what you want us to help you with" required>
+            </div>
+
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea id="message" name="message" placeholder="Tell us how we can assist you..." required></textarea>
+            </div>
+
+            <button type="submit" class="form-submit">Send Message</button>
+        </form>
     </div>
 </section>
 
